2003-05-29  JMB  Dynamic multi-line string entry fields, CR-only CSV import

    Text boxes for string fields in the row editor now accept multiple
    lines of input; pressing return causes the height of the input field
    to grow by one row.  This is basically the way that text entry fields
    work in many PalmOS and Psion applications, except that word wrap isn't
    enabled (Qt doesn't estimate the width of text lines accurately enough
    to reliably calculate the number of lines needed).

    PortaBase now correctly imports CSV files which use only carriage
    returns for line endings.  This is the format used by old MacOS versions
    and at least some Psion data export utilities, maybe by other software
    as well.

2003-05-28  JMB  Enum option sorting, import, and export

    Added a button to the enum editor which sorts the enum's options in
    alphabetical order.  Clicking once sorts in ascending order, clicking
    again sorts in descending order.  Helps keep enums with many options
    organized (such as a list of people's names).

    The enum editor also has new import and export buttons.  Export creates
    a text file with each option on a separate line.  Import opens such a
    file and adds to the enum any lines from it which aren't already listed
    as options.

2003-05-24  JMB  Better menu handling in desktop versions

    In at least some versions of Qt3, the menu was present but no text was
    shown.  Now using a more normal display method which seems to work more
    reliably.

2003-05-23  JMB  Alternate row shading, calculator widget

    Even and odd rows now use different background colors to make it easier
    to follow a row across the screen.  The default colors are white and
    light gray, but can be specified via buttons in the Preferences dialog.
    These colors are used in the data viewer, columns editor, view editor,
    and sorting editor.

    At the end of each entry field for a numeric value (type integer or