@@ -9,11 +9,13 @@
  * (at your option) any later version.
  */
 
+#include <qapplication.h>
 #include "dynamicedit.h"
 
 DynamicEdit::DynamicEdit(QWidget *parent, const char *name)
   : QMultiLineEdit(parent, name), oldHeight(1)
 {
+    clearTableFlags(Tbl_autoVScrollBar|Tbl_autoHScrollBar);
     connect(this, SIGNAL(textChanged()), this, SLOT(adjustHeight()));
     setFixedVisibleLines(1);
 }
@@ -27,4 +29,37 @@ bool DynamicEdit::adjustHeight()
         return true;
     }
     return false;
+}
+
+void DynamicEdit::keyPressEvent(QKeyEvent *e)
+{
+    // tab moves between fields instead of adding a tab to the text
+    int key = e->key();
+    if (key == Qt::Key_Tab || key == Qt::Key_Backtab) {
+        QTableView::event(e);
+    }
+    else {
+        QMultiLineEdit::keyPressEvent(e);
+    }
+}
+
+bool DynamicEdit::focusNextPrevChild(bool next)
+{
+    // bypass dummy implementation in QMultiLineEdit
+    return QWidget::focusNextPrevChild(next);
+}
+
+// QMultiLineEdit implementation return value is too wide
+QSize DynamicEdit::sizeHint() const
+{
+    constPolish();
+    QFontMetrics fm(font());
+    int h = fm.lineSpacing() * 5 + fm.height() + frameWidth() * 2;
+    int w = fm.width('x') * 5;
+
+    int maxh = maximumSize().height();
+    if (maxh < QWIDGETSIZE_MAX) {
+	h = maxh;
+    }
+    return QSize(w, h).expandedTo(QApplication::globalStrut());
 }
